--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -53,5 +53,37 @@ div.child{
 
 そして「祖先要素」とは親要素のことを指す。
 
+包含ブロックについては以下のページに詳しく書いたので、忘れた場合はこちらを参照。
 [CSSの仕様書を読む part1-2 包含ブロックやpositionプロパティ](https://github.com/ren-github-account/Today-I-Learned/blob/main/%E3%83%9E%E3%83%BC%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97%E8%A8%80%E8%AA%9E/CSS/CSS%E3%81%AE%E4%BB%95%E6%A7%98%E6%9B%B8%E3%82%92%E8%AA%AD%E3%82%80%20part1-2%20%E5%8C%85%E5%90%AB%E3%83%96%E3%83%AD%E3%83%83%E3%82%AF%E3%82%84position%E3%83%97%E3%83%AD%E3%83%91%E3%83%86%E3%82%A3.md)
+
+まとめると、`absolute`は以下の挙動をすることになる。
+
+**・直近の親要素に`relative`, `absolute`, `fixed`, `sticky`のどれかのpositionプロパティの値が指定されていれば、その親要素を基準にする。一方、何も指定されていなければ、包含ブロックを基準にする。**
+
+### つまり親要素はrelativeじゃなくてもok
+
+つまり、上記の仕様をふまえると、親要素にしていするpositionプロパティの値はべつに`relative`じゃなくても良いということになる。
+
+実際、最初のコードのCSSを以下のように変更しても表示される結果は同じになる。
+
+```
+div.parent{
+ height:300px;
+ width:500px;
+ background-color:#B0A695;
+ position:absolute; /* ここの親要素のpositionプロパティをrelativeからabsoluteへ変更した */
+}
+
+div.child{
+ background-color:#EBE3D5;
+ position:absolute;
+ bottom:0;
+}
+```
+
+### ではなんでrelativeが使われるのか
+
+べつに親要素のpositionプロパティの値は`absolute`の仕様上、`relative`じゃなくても良いならではなぜ`relative`が使われるのかという疑問が湧いてくる。
+
+
 
