--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -84,7 +84,21 @@ div.child{
 
 ### ではなんでrelativeが使われるのか
 
-べつに親要素のpositionプロパティの値は`absolute`の仕様上、`relative`じゃなくても良いならではなぜ`relative`が使われるのかという疑問が湧いてくる。
+べつに親要素のpositionプロパティの値は`absolute`の仕様上、`relative`じゃなくても良いならば、それではなぜ`relative`が使われるのかという疑問が湧いてくる。
+
+その答えは、`absolute`と`relative`の挙動に以下の違いがあるため。
+
+||特質|
+|-|-|
+|`absolute`|自分自身の元々の表示領域を確保しない。このため、後に続く要素が詰めて表示される。|
+|`relative`|一方`relative`の場合は、自分自身が元々表示されていた領域を確保したまま移動する。このため、自分の元いたスペースは空白となって表示される。|
+
+つまり、`relative`にした方が、「元々の表示領域を確保する」という性質上、安定性があるからということになる。
+
+### 参考
+https://qiita.com/10kei/items/73990507eac9643cb731
+
+https://qiita.com/takayuki_kito/items/dbf1774482fc49ea7b39
 
 
 
