--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -34,9 +34,31 @@ div.parent{
 div.child{
  background-color:#EBE3D5;
  position:absolute; /* 子要素にはabsoluteを指定 */
- bottom:0;　/* bottomの値を0とすることで一番下になる */
+ bottom:0;　/* bottomの値を0とすることで一番下になる。*/
 }
 ```
+
+**補足**
+
+bottomは下からの高さをpxで指定できる。  
+参考:https://www.gravity-works.jp/css_blog/2009/08/div.html
+
+厳密には、MDNのbottomのページに以下のように書かれている。
+
+>When position is set to absolute or fixed, the bottom property specifies the distance between the outer edge of the element's bottom margin and the outer edge of the containing block's bottom padding,
+>
+>or, in the case of anchor positioned elements when the anchor() function is used within the value, relative to the position of the specified <anchor-side> edge.
+>
+>The bottom property is compatible with the top, bottom, start, end, self-start, self-end, center, and <percentage> values.
+>
+>positionが absolute または fixed に設定されている場合、bottom プロパティは、要素のbottom marginの外側の端と包含ブロックのbottom paddingの外側の端の間の距離を指定します。
+>
+>または、アンカーで配置された要素の場合は、値内で anchor() 関数が使用され、指定された <anchor-side> 端の位置を基準とした距離を指定します。
+>
+>bottom プロパティは、top、bottom、start、end、self-start、self-end、center、および <percentage> 値と互換性があります。
+>
+>引用:https://developer.mozilla.org/en-US/docs/Web/CSS/bottom
+
 
 ### なぜ親要素をrelativeに子要素をabsoluteにすると良いのか
 
