--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -3,4 +3,4 @@
 
 「`OOP`」は「Object-oriented programming」の略。`oriented`は「方向づけられた, ～指向の」などの意味がある。
 
-OOPとは、「**システムをオブジェクトの集合としてモデル化すること**」である。
+OOPとは、「**システムをオブジェクトの集合としてモデル化すること**」を指す。
