--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -1,6 +1,21 @@
-### 前提
+## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
 
 「`OOP`」は「Object-oriented programming」の略。`oriented`は「方向づけられた, ～指向の」などの意味がある。
 
 OOPとは、「**システムをオブジェクトの集合としてモデル化すること**」を指す。
+
+### オブジェクト内の関数の省略記法
+
+オブジェクト内の関数は基本は以下のように書く。
+
+```
+bio: function() {}, …(以下略)
+```
+
+だけど、上記の`:`(コロン)と`function`を省略して以下のようにも書ける。
+
+```
+bio() {}, …(以下略)
+```
+
