--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -19,3 +19,12 @@ bio: function() {}, …(以下略)
 bio() {}, …(以下略)
 ```
 
+### オブジェクトリテラル
+
+以下のコードのように「**作成することになったオブジェクトのコンテンツを文字通り書き出したもの**」のことを**オブジェクトリテラル**と呼ぶ。
+```
+const person = {
+  name:["Bob", "Smith"],
+  age:32,
+ };
+```
