--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -22,6 +22,8 @@ bio() {}, …(以下略)
 ### オブジェクトリテラル
 
 以下のコードのように「**作成することになったオブジェクトのコンテンツを文字通り書き出したもの**」のことを**オブジェクトリテラル**と呼ぶ。
+
+これは**クラスからインスタンス化されたオブジェクトとは区別**される。
 ```
 const person = {
   name:["Bob", "Smith"],
