--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -30,3 +30,9 @@ const person = {
   age:32,
  };
 ```
+オブジェクトの中身を取り出したい場合はコンソール画面に以下のように入力する。
+
+```
+person.name; /*  ['Bob', 'Smith']と出力される。
+person.age;　/* 32と出力される。
+```
