--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -1,3 +1,8 @@
+*目次*
+* [前提](#前提)
+* [オブジェクト内の関数の省略記法](#オブジェクト内の関数の省略記法)
+* [オブジェクトリテラル](#オブジェクトリテラル)
+* 
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
 
