--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -41,3 +41,14 @@ const person = {
 person.name; /*  ['Bob', 'Smith']と出力される。
 person.age;　/* 32と出力される。
 ```
+
+### オブジェクトリテラルの利用場面
+オブジェクトリテラルを使用してオブジェクトを作成するのは、以下のように場面で使う。
+
+```
+例えば、データベースに入れるリクエストをサーバーに送信するような場合にとても一般的です。
+単一のオブジェクトを送信することは、複数のアイテムを個別に送信するよりもはるかに効率的であり、
+個々のアイテムを名前で識別したい場合には、配列よりも扱いやすいときがあります。
+```
+引用:https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects/Basics
+
