--- a/JavaScript/クラスとインスタンス.md
+++ b/JavaScript/クラスとインスタンス.md
@@ -2,6 +2,7 @@
 * [前提](#前提)
 * [オブジェクト内の関数の省略記法](#オブジェクト内の関数の省略記法)
 * [オブジェクトリテラル](#オブジェクトリテラル)
+* [オブジェクトリテラルの利用場面](#オブジェクトリテラルの利用場面)
 * 
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
