--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -42,9 +42,9 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 
 プロパティの終わりに`;`は不要。付けるとエラーがでる。
 
-### 利用方法
+### 呼び出し方
 
-オブジェクトの利用方法には以下の2つがある。
+オブジェクトの中身を呼び出すには以下の2つのやり方がある。
 
 ```
 オブジェクト名.プロパティ名 //ドット記法
