--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -3,7 +3,8 @@
 * [プロパティとは](#プロパティとは)
 * [メソッド](#メソッド)
 * [オブジェクトの定義方法](#オブジェクトの定義方法)
-* [利用方法](#利用方法)
+* [呼び出し方](#呼び出し方)
+* [参考](#参考)
 
 ### オブジェクトとは
 
@@ -75,3 +76,7 @@ bluearchive.voice();　//bluearchiveオブジェクトのvoiceメソッドを呼
 shiroco
 備えあれば憂いなし。シンプルなルールだ 
 ```
+
+### 参考
+
+https://it-biz.online/web-design/object-2/
