--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -78,5 +78,8 @@ shiroco
 ```
 
 ### 参考
-
+・JavaScriptのオブジェクトとは？基本と使い方のコツを３分で解説  
 https://it-biz.online/web-design/object-2/
+
+・JavaScriptのオブジェクトって何？【よくわからないシリーズ】  
+https://tonoblog.yutaka01.net/2022/10/29/javascript-object/
