--- a/JavaScript/わかりやすい学習サイト.md
+++ b/JavaScript/わかりやすい学習サイト.md
@@ -8,6 +8,14 @@ https://beginners-hp.com/javascript/
 **追記**  
 上記でわかりやすいと書いたが訂正。やっぱわかりにくいw わかりやすいところもあるけど、よく読むとある程度基礎知識がある人向けに書かれているページも多くて初心者向けではないという印象を受けた。
 
+・MDN-JavaScript オブジェクト入門
+
+https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects
+
+分かりやすさでいえば、MDNのJavaScript入門のページが初心者向けに知識のもれがなく網羅的に書かれていてわかりやすいと思った。インターネット上にある解説ページは、ところどころ知識に穴ぼこがあって、それが初心者にとってわかりにくくしているんだなと思った。1から10まで解説してくれていないため、初心者にとっては「え?なんでそうなるの？」とひっかかりを覚えるというか。
+
+
+
 ### 辞書として
 ・JavaScript Primer
 
