--- a/JavaScript/わかりやすい学習サイト.md
+++ b/JavaScript/わかりやすい学習サイト.md
@@ -12,7 +12,8 @@ https://beginners-hp.com/javascript/
 
 https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects
 
-分かりやすさでいえば、MDNのJavaScript入門のページが初心者向けに知識のもれがなく網羅的に書かれていてわかりやすいと思った。ググってヒットするインターネット上にある解説ページは、ところどころ知識に穴ぼこがあって、それが初心者にとってわかりにくくしているんだなと思った。1から10まで解説してくれていないため、初心者にとっては「え?なんでそうなるの？」とひっかかりを覚えるというか。
+分かりやすさでいえば、MDNのJavaScript入門のページが初心者向けに知識のもれがなく網羅的に書かれていてわかりやすいと思った。  
+よくあるインターネット上にある解説ページは、ところどころ知識に穴ぼこがあって、それが初心者にとってわかりにくくしているんだなと思った。1から10まで解説してくれていないため、初心者にとっては「え?なんでそうなるの？」とひっかかりを覚えるというか。
 
 
 
