--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -50,7 +50,7 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 ```
 オブジェクト名.プロパティ名 //ドット記法
 
-オブジェクト名['プロパティ名']　//ブラケット記法。bracketは英語で「角括弧(かくかっこ)などの括弧」の意味がある。
+オブジェクト名["プロパティ名"]　//ブラケット記法。bracketは英語で「角括弧(かくかっこ)などの括弧」の意味がある。
 ```
 
 #### ドット記法
