--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -3,6 +3,7 @@
 * [オブジェクト内の関数の省略記法](#オブジェクト内の関数の省略記法)
 * [オブジェクトリテラル](#オブジェクトリテラル)
 * [オブジェクトリテラルの利用場面](#オブジェクトリテラルの利用場面)
+* [ブラケット記法で引数を使って値を取得](#ブラケット記法で引数を使って値を取得)
 * 
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
@@ -52,4 +53,27 @@ person.age;　/* 32と出力される。
 個々のアイテムを名前で識別したい場合には、配列よりも扱いやすいときがあります。
 ```
 引用:https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects/Basics
+
+### ブラケット記法で引数を使って値を取得
+以下のコードでは、`logProperty`関数を定義して、その引数を`propertyName`とすることで、`関数名("プロパティ名")`とコンソールに入力するとプロパティの値を取り出せるようにしている。
+
+```
+const person = {
+  name:["Bob","Smith"],
+  age:32
+     };
+
+function logProperty(propertyName) {
+  console.log(person[propertyName]);
+ }
+```
+
+値を取り出すにはコンソール画面に以下のように入力する。
+
+```
+logProperty("name"); /* 出力結果: ['Bob', 'Smith']
+logProperty("age"); /* 出力結果: 32
+```
+
+
 
