--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -63,8 +63,8 @@ const person = {
   age:32
      };
 
-function logProperty(propertyName) {
-  console.log(person[propertyName]);
+function logProperty(propertyName) {  /* logProperty関数を定義 引数をpropertyNameに設定
+  console.log(person[propertyName]);　/* ここでオブジェクト名[引数]とすることで、引数に入力した時にブラケット記法で認識されるようにしている
  }
 ```
 
