--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -64,7 +64,8 @@ const person = {
      };
 
 function logProperty(propertyName) {  /* logProperty関数を定義 引数をpropertyNameに設定
-  console.log(person[propertyName]);　/* ここでオブジェクト名[引数]とすることで、引数に入力した時にブラケット記法で認識されるようにしている
+  console.log(person[propertyName]);　/* ここでオブジェクト名[引数]とすることで、
+　　　　　　　　　　　　　　　　　　　　　　引数に入力した時にブラケット記法で認識されるようにしている
  }
 ```
 
@@ -75,5 +76,8 @@ logProperty("name"); /* 出力結果: ['Bob', 'Smith']
 logProperty("age"); /* 出力結果: 32
 ```
 
+ブラケット記法については以下のオブジェクトのページでも書いた。
+
+[オブジェクトとは](https://github.com/ren-github-account/Today-I-Learned/blob/main/JavaScript/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%A8%E3%81%AF.md)
 
 
