--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -4,6 +4,7 @@
 * [オブジェクトリテラル](#オブジェクトリテラル)
 * [オブジェクトリテラルの利用場面](#オブジェクトリテラルの利用場面)
 * [ブラケット記法で引数を使って値を取得](#ブラケット記法で引数を使って値を取得)
+* [オブジェクトの値を更新する](#オブジェクトの値を更新する)
 * 
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
@@ -79,5 +80,25 @@ logProperty("age"); /* 出力結果: 32
 ブラケット記法については以下のオブジェクトのページでも書いた。
 
 [オブジェクトとは](https://github.com/ren-github-account/Today-I-Learned/blob/main/JavaScript/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%A8%E3%81%AF.md)
+
+### オブジェクトの値を更新する
+
+これまではオブジェクトから値を「取り出す」やり方だけだったが、取り出すだけではなくオブジェクトの値を「更新」することもできる。
+
+オブジェクトの値を更新するには以下のように書く。
+
+```
+person.age = 45;
+
+/* ブラケット記法では以下のように書く */
+person["age"] = 45;
+```
+値が更新されているか確認するには以下のように書く。
+
+```
+person.age; /* 出力結果:45
+person["age"]; /* person.ageの場合と同じ
+```
+
 
 
