--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -18,13 +18,13 @@ OOPとは、「**システムをオブジェクトの集合としてモデル化
 オブジェクト内の関数は基本は以下のように書く。
 
 ```
-bio: function() {}, …(以下略)
+プロパティ名: function() {}, …(以下略)
 ```
 
 だけど、上記の`:`(コロン)と`function`を省略して以下のようにも書ける。
 
 ```
-bio() {}, …(以下略)
+プロパティ名() {}, …(以下略)
 ```
 
 ### オブジェクトリテラル
