--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -5,6 +5,7 @@
 * [オブジェクトリテラルの利用場面](#オブジェクトリテラルの利用場面)
 * [ブラケット記法で引数を使って値を取得](#ブラケット記法で引数を使って値を取得)
 * [オブジェクトの値を更新する](#オブジェクトの値を更新する)
+* [オブジェクトに新しいプロパティを追加](#オブジェクトに新しいプロパティを追加)
 * 
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
@@ -98,6 +99,19 @@ person["age"] = 45;
 ```
 person.age; /* 出力結果:45
 person["age"]; /* person.ageの場合と同じ
+```
+
+### オブジェクトに新しいプロパティを追加
+
+上記でオブジェクトの値を更新することができることを見てきたが、それだけではなくオブジェクトに「まったく新しいプロパティを追加する」こともできる。
+
+以下のように書く。
+
+```
+person["eyes"] = "hazel";　/* ここではブラケット記法を使用している。hazelは黄土色っぽい色を指し、目の色を表す時に使われる。
+person.farewell = function () {
+  console.log("Bye everybody!");
+};
 ```
 
 
