--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -108,8 +108,9 @@ person["age"]; /* person.ageの場合と同じ
 以下のように書く。
 
 ```
-person["eyes"] = "hazel";　/* ここではブラケット記法を使用している。hazelは黄土色っぽい色を指し、目の色を表す時に使われる。
-person.farewell = function () {
+person["eyes"] = "hazel";　/* personオブジェクトにeyesプロパティとその値hazelを追加。ここではブラケット記法を使用している。
+　　　　　　　　　　　　　　　　hazelは黄土色っぽい色を指し、目の色を表す時に使われる。
+person.farewell = function () {　/* personオブジェクトにfarewell(英語で「別れ」の意味)プロパティとその中身に関数を追加。
   console.log("Bye everybody!");
 };
 ```
