--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -113,6 +113,16 @@ person["eyes"] = "hazel";　/* personオブジェクトにeyesプロパティと
 person.farewell = function () {　/* personオブジェクトにfarewell(英語で「別れ」の意味)プロパティとその中身に関数を追加。
   console.log("Bye everybody!");
 };
+
+person.unco = "kusai";
+```
+
+呼び出す時は以下のように書く。
+
+```
+person["eyes"]; /* 出力結果:'hazel'
+person.farewell(); /* 出力結果:Bye everybody! (解説:everyoneとの違いはeverybodyの方が口語的な表現)
+person.unco; /* 出力結果:'kusai'
 ```
 
 
