--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -103,7 +103,7 @@ person["age"]; /* person.ageの場合と同じ
 
 ### オブジェクトに新しいプロパティを追加
 
-上記でオブジェクトの値を更新することができることを見てきたが、それだけではなくオブジェクトに「まったく新しいプロパティを追加する」こともできる。
+上記でオブジェクトの値を更新する方法を見てきたが、それだけではなくオブジェクトに「まったく新しいプロパティを追加する」こともできる。
 
 以下のように書く。
 
