--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -4,6 +4,7 @@
 * [オブジェクトリテラル](#オブジェクトリテラル)
 * [オブジェクトリテラルの利用場面](#オブジェクトリテラルの利用場面)
 * [ブラケット記法で引数を使って値を取得](#ブラケット記法で引数を使って値を取得)
+* [ブラケット記法の利用場面](#ブラケット記法の利用場面)
 * [オブジェクトの値を更新する](#オブジェクトの値を更新する)
 * [オブジェクトに新しいプロパティを追加](#オブジェクトに新しいプロパティを追加)
 * 
@@ -81,6 +82,16 @@ logProperty("age"); /* 出力結果: 32
 ブラケット記法については以下のオブジェクトのページでも書いた。
 
 [オブジェクトとは](https://github.com/ren-github-account/Today-I-Learned/blob/main/JavaScript/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%A8%E3%81%AF.md)
+
+### ブラケット記法の利用場面
+**オブジェクトのプロパティ名が変数で管理されている場合**にブラケット記法を使用して値にアクセスすることができる。
+
+```
+一般に、ドット記法はブラケット記法よりも簡潔で読みやすいため、より好ましいとされています。
+しかし、角括弧を使用しなければならない用途もあります。 例えば、オブジェクトのプロパティ名が変数で管理されている場合、
+ドット記法を使用して値にアクセスすることはできませんが、ブラケット記法を使用して値にアクセスすることは可能です。
+```
+引用:https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects/Basics
 
 ### オブジェクトの値を更新する
 
