--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -2,9 +2,9 @@
 * [前提](#前提)
 * [オブジェクト内の関数の省略記法](#オブジェクト内の関数の省略記法)
 * [オブジェクトリテラル](#オブジェクトリテラル)
-* [オブジェクトリテラルの利用場面](#オブジェクトリテラルの利用場面)
+* [オブジェクトリテラルの使用場面](#オブジェクトリテラルの使用場面)
 * [ブラケット記法で引数を使って値を取得](#ブラケット記法で引数を使って値を取得)
-* [ブラケット記法の利用場面](#ブラケット記法の利用場面)
+* [ブラケット記法の使用場面](#ブラケット記法の使用場面)
 * [オブジェクトの値を更新する](#オブジェクトの値を更新する)
 * [オブジェクトに新しいプロパティを追加](#オブジェクトに新しいプロパティを追加)
 * 
