--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -7,7 +7,7 @@
 * [ブラケット記法の使用場面](#ブラケット記法の使用場面)
 * [オブジェクトの値を更新する](#オブジェクトの値を更新する)
 * [オブジェクトに新しいプロパティを追加](#オブジェクトに新しいプロパティを追加)
-* 
+* [中括弧とは](#中括弧とは)
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
 
@@ -135,6 +135,21 @@ person["eyes"]; /* 出力結果:'hazel'
 person.farewell(); /* 出力結果:Bye everybody! (解説:everyoneとの違いはeverybodyの方が口語的な表現)
 person.unco; /* 出力結果:'kusai'
 ```
+
+### 中括弧とは
+
+本筋とは関係ないけど、MDNのJavaScript入門のページに「中括弧」という表現が出てきてわからないかったのでメモ。
+
+中括弧とは`{}`のこと。そのほかに小括弧や大括弧もある。
+
+表にまとめると以下になる。
+
+||名前|
+|-|-|
+|`()`|小括弧。丸括弧とも呼ばれる。|
+|`{}`|中括弧。波括弧とも呼ばれる。|
+|`[]`|大括弧。角括弧とも呼ばれる。|
+
 
 
 
