--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -146,9 +146,9 @@ person.unco; /* 出力結果:'kusai'
 
 ||名前|
 |-|-|
-|`()`|小括弧。丸括弧とも呼ばれる。|
-|`{}`|中括弧。波括弧とも呼ばれる。|
-|`[]`|大括弧。角括弧とも呼ばれる。|
+|`()`|小括弧。別名、丸括弧とも呼ばれる。|
+|`{}`|中括弧。別名、波括弧とも呼ばれる。|
+|`[]`|大括弧。別名、角括弧とも呼ばれる。|
 
 
 
