--- a/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
+++ b/JavaScript/クラスとインスタンス(オブジェクトの基本も).md
@@ -8,6 +8,7 @@
 * [オブジェクトの値を更新する](#オブジェクトの値を更新する)
 * [オブジェクトに新しいプロパティを追加](#オブジェクトに新しいプロパティを追加)
 * [中括弧とは](#中括弧とは)
+* [ブラケット記法を使ってプロパティ名やその値を変数で管理する](#ブラケット記法を使ってプロパティ名やその値を変数で管理する)
 ## 前提
 オブジェクト指向プログラミングのことを略称で「`OOP`」と呼ぶ。
 
@@ -93,6 +94,10 @@ logProperty("age"); /* 出力結果: 32
 ```
 引用:https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects/Basics
 
+具体的に使い方は以下で詳しく書いた。
+
+[ブラケット記法を使ってプロパティ名やその値を変数で管理する](#ブラケット記法を使いプロパティ名やその値を変数で管理する)
+
 ### オブジェクトの値を更新する
 
 これまではオブジェクトから値を「取り出す」やり方だけだったが、取り出すだけではなくオブジェクトの値を「更新」することもできる。
@@ -150,6 +155,30 @@ person.unco; /* 出力結果:'kusai'
 |`{}`|中括弧。別名、波括弧とも呼ばれる。|
 |`[]`|大括弧。別名、角括弧とも呼ばれる。|
 
+### ブラケット記法を使ってプロパティ名やその値を変数で管理する
+
+以下のように使う。
+
+```
+ <script>
+const person = {　/* ここでpersonオブジェクトとプロパティを定義
+  name:["Bob","Smith"],
+  age:32
+       };
+
+const myDataName = "height";　/* この変数myDataNameがpersonオブジェクトのプロパティ名になる
+const myDataValue = "1.75m";　/* この変数myDataValueがpersonオブジェクトのmyDataNameプロパティの値になる
+person[myDataName] = myDataValue; /* ブラケット記法を使ってpersonオブジェクトにまったく新しいプロパティ名とその値を追加している
+
+    </script>
+
+```
+
+追加されているか確認するには、以下のコードをコンソール画面に入力する。
+
+```
+person.height; /* 出力結果:'1.75m'
+```
 
 
 
