--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -23,7 +23,7 @@
 ### オブジェクトの定義方法
 
 ```
-// constを使ってオブジェクトを宣言している
+// constを使ってオブジェクトを作成している
 
 const オブジェクト名 = { 名前1:値,　//プロパティ1　
               名前2:値,  //プロパティ2
