--- a/JavaScript/わかりやすい学習サイト.md
+++ b/JavaScript/わかりやすい学習サイト.md
@@ -15,6 +15,14 @@ https://developer.mozilla.org/ja/docs/Learn/JavaScript/Objects
 分かりやすさでいえば、MDNのJavaScript入門のページが初心者向けに知識のもれがなく網羅的に書かれていてわかりやすいと思った。  
 よくあるインターネット上にある解説ページは、ところどころ知識に穴ぼこがあって、それが初心者にとってわかりにくくしているんだなと思った。1から10まで解説してくれていないため、初心者にとっては「え?なんでそうなるの？」とひっかかりを覚えるというか。
 
+**中級者向け**
+
+・JavaScript初級者から中級者になろう-uhyohyo.net
+https://uhyohyo.net/javascript/
+
+中級者向けの内容を解説してくれているページ。結構わかりやすい。
+
+っていうかオブジェクトとかクラスの部分MDNのサイトで勉強しながらややこしいなぁwと思っていたけど、中級者向けだったのか。そりゃあ難しいわけだ。
 
 
 ### 辞書として
