--- a/マークアップ言語/HTML/実践編/脚注を作る.md
+++ b/マークアップ言語/HTML/実践編/脚注を作る.md
@@ -17,7 +17,7 @@ aタグを使用して以下のように書く。
 
 ### 解説
 
-①まず、aタグで`href="#id名"`のように先頭に`#`を付けて任意のid名を設定する。  **
+①まず、aタグで`href="#id名"`のように先頭に`#`を付けて任意のid名を設定する。  
 ②リンク先のタグのid名の部分に①で`#id名`のところで設定したid名を設定することで、リンク元をクリックするとそのid名を持つタグに飛ぶことができるようになる。
 
 **補足**
