--- a/マークアップ言語/HTML/実践編/脚注を作る.md
+++ b/マークアップ言語/HTML/実践編/脚注を作る.md
@@ -19,7 +19,7 @@ aタグを使用して以下のように書く。
 
 ①まず、aタグで`href="#id名"`のように先頭に`#`を付けて任意のid名を設定する。  
 
-②リンク先のタグのid名の部分に①の`#id名`のところで設定したid名を設定することで、リンク元をクリックするとそのid名を持つタグに飛ぶことができるようになる。
+②リンク先のタグのid名の部分に①の`#id名`のところで設定したid名を設定することで、リンク元をクリックするとそのid名を持つタグの場所に飛ぶことができるようになる。
 
 **補足**
 
@@ -35,3 +35,7 @@ span.up-small {
     font-size: 1em;
 }
 ```
+
+### 参考
+
+[同じページ内にリンクする](https://www.tagindex.com/html_tag/link/a_id.html)
