--- a/JavaScript/わかりやすい学習サイト.md
+++ b/JavaScript/わかりやすい学習サイト.md
@@ -11,7 +11,7 @@ https://www.pazru.net/js/
 
 https://beginners-hp.com/javascript/
 
-初心者向けに基本から応用までひと通り解説してくれている。たいへんわかりやすい。
+~初心者向けに基本から応用までひと通り解説してくれている。たいへんわかりやすい。~
 
 **追記**  
 上記でわかりやすいと書いたが訂正。やっぱわかりにくいw わかりやすいところもあるけど、よく読むとある程度基礎知識がある人向けに書かれているページも多くて初心者向けではないという印象を受けた。
