--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -3,6 +3,7 @@
 * [プロパティとは](#プロパティとは)
 * [メソッド](#メソッド)
 * [オブジェクトの定義方法](#オブジェクトの定義方法)
+* [リテラルとは](#リテラルとは)
 * [呼び出し方](#呼び出し方)
 * [参考](#参考)
 
@@ -34,7 +35,7 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 
 **ルール**
 
-* オブジェクトの`{}`のことをオブジェクトリテラルという。
+* `{}`で囲んだ範囲のことをオブジェクトリテラルという。
 * 名前と値を`:`(コロン)で区切る。
 * プロパティを複数定義する時は、 `,`(カンマ)で区切る。
 * プロパティの値には、変数を指定することもできる。
@@ -42,6 +43,17 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 **注意点**
 
 プロパティの終わりに`;`は不要。付けるとエラーがでる。
+
+### リテラルとは
+2024.11.27追記
+
+先ほど、オブジェクトリテラルという言葉が出てきたけど、そもそもリテラルとは何だろうか。
+
+リテラルとは、**プログラム上で数値や文字列など、データ型の値を直接記述できるように構文として定義されたもののこと**を指す。( 参照:[リテラル](https://jsprimer.net/basic/data-type/#literal) )
+
+**データ型には、例えば文字列型があり、** 文字列型は具体的には`"こんにちわ"`と`"`で囲まれたものを指す。
+
+要するに、リテラルは`"`で囲むとプログラム上で文字列型として認識され、`{}`で囲むとオブジェクトとして認識されるといったように、**データを記述するための構文のこと。**
 
 ### 呼び出し方
 
