--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -51,9 +51,9 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 
 リテラルとは、**プログラム上で数値や文字列など、データ型の値を直接記述できるように構文として定義されたもののこと**を指す。( 参照:[リテラル](https://jsprimer.net/basic/data-type/#literal) )
 
-**データ型には、例えば文字列型があり、** 文字列型は具体的には`"こんにちわ"`と`"`で囲まれたものを指す。
+**データ型には、例えば文字列型があり、** 文字列型は具体的には`"こんにちわ"`などと`"`で囲まれたものを指す。
 
-要するに、リテラルは`"`で囲むとプログラム上で文字列型として認識され、`{}`で囲むとオブジェクトとして認識されるといったように、**データを記述するための構文のこと。**
+要するに、リテラルとは`"`で囲むとプログラム上で文字列型として認識され、`{}`で囲むとオブジェクトとして認識されるといったように、**データを記述するための便利な構文のこと。**
 
 ### 呼び出し方
 
