--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -122,6 +122,9 @@ print "計算結果:$b";
 
 ランダムな数値の変化に合わせて、うんちを表示させるプログラム。
 
+2024.11.27追記
+さしずめ、ランダムうんちメーカーとでも名付けようか
+
 ```
 #!C:\xampp\perl\bin\perl.exe
 print "Content-type: text/html;charset=utf-8\n\n";
