--- a/JavaScript/整数をランダムに生成.md
+++ b/JavaScript/整数をランダムに生成.md
@@ -4,8 +4,14 @@ Math.floor(Math.random() * (n + 1))
 ```
 **解説**
 
-上記のコードで「0からn」までの整数を生成することができるが、`Math.random()`は「0から1未満」の数字をランダムに生成することから、生成結果が「0」になってしまうことがある。  
+上記のコードで「0からn」までの整数を生成することができるが、`Math.random()`は「0以上1未満」の数字をランダムに生成することから、生成結果が「0」になってしまうことがある。  
 例えば、n=2にしたとしても掛ける値が`0.00000000000001`だとしたら`0.00000000000001 * 3 = 0.00000000000003 `となって`floor`が小数点以下を切り捨てなので最終的な値は「0」になってしまう。
+
+### 追記
+2024.11.27
+
+`Math.random()`の戻り値は、厳密には **「0以上1未満の擬似乱数である浮動小数点数を返す」**。
+
 
 ### 応用
 ```
