--- a/JavaScript/整数をランダムに生成.md
+++ b/JavaScript/整数をランダムに生成.md
@@ -10,7 +10,11 @@ Math.floor(Math.random() * (n + 1))
 ### 追記
 2024.11.27
 
-`Math.random()`の戻り値は、厳密には **「0以上1未満の擬似乱数である浮動小数点数を返す」**。
+`Math.random()`の戻り値は、厳密には **「0以上1未満の擬似乱数である浮動小数点数を返す」**。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Math/random) )
+
+疑似乱数とは、**疑似的なランダムな数字のこと。**
+
+**疑似的とは**どういうことかというと、ランダムな数字とは言っても、**コンピュータはなんらかのルールに基づいてしか動くことができないので、実際はなんらかの規則に従って作られているけれどランダムのように「見える」数字ということで「疑似」と付いている。**
 
 
 ### 応用
