--- a/JavaScript/整数をランダムに生成.md
+++ b/JavaScript/整数をランダムに生成.md
@@ -16,7 +16,7 @@ Math.floor(Math.random() * (n + 1))
 
 **疑似的とは**どういうことかというと、ランダムな数字とは言っても、**コンピュータはなんらかのルールに基づいてしか動くことができないので、実際はなんらかの規則に従って作られているけれどもランダムに生成されているように「見える」数字ということで「疑似」と付いている。**　( 参照:[分かりそうで](https://wa3.i-3-i.info/word17689.html) )
 
-**浮動小数点数**とは、例えば小数の「123.45」をコンピュータさんに伝えたいと思った時、コンピュータさんは小数が理解できないため、小数「123.45」を「1.2345 x 10^2」と掛け算の形に変換して渡すやり方のこと。
+**浮動小数点数**とは、例えば小数の「123.45」をコンピュータさんに伝えたいと思った時、コンピュータさんは小数をそのままの形で理解できないため、小数「123.45」を「1.2345 x 10^2」と掛け算の形に変換して渡すやり方のこと。
 
 要するに、浮動小数点は、**小数を「何らかの数字(整数でも小数でも可)　x　10のn乗」の形に変換してコンピュータに伝えるやり方**のことと覚えておけばok。( 参照:[分かりそうで](https://wa3.i-3-i.info/word14959.html)、[IT用語辞典](https://e-words.jp/w/%E4%BB%AE%E6%95%B0.html) )
 
