--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -2,7 +2,7 @@
 
 JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。
 
-## 基礎知識
+## 基礎知識一覧
 
 `createElement()メソッド`は、 **`tagName`で指定されたHTML要素を生成する。**
 
