--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -1,12 +1,20 @@
 ## 概要
 
-JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。
+JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。なお、合わせて調べた周辺知識もまとめている。
 
 ## 基礎知識一覧
 
 `createElement()メソッド`は、 **`tagName`で指定されたHTML要素を生成する。**
 
-この場合の`tagName`とは具体的には、div要素なら`div`、p要素なら`p`のことを指す。
+この場合の`tagName`とは具体的には、div要素なら`div`、p要素なら`p`のことを指す。以前学習した`tagNameプロパティ`の時は、大文字が重要だったが、今回`createElement()メソッド`の**引数に書くのは小文字でok。** ( 復習:[targetプロパティの活用](https://github.com/ren-github-account/Today-I-Learned/blob/main/JavaScript/MDN-%E3%82%A4%E3%83%99%E3%83%B3%E3%83%88%E5%85%A5%E9%96%80-%E3%81%9D%E3%81%AE2.md#target%E3%83%97%E3%83%AD%E3%83%91%E3%83%86%E3%82%A3%E3%81%AE%E6%B4%BB%E7%94%A8%E6%B3%95) )
+
+使うには以下のように書く。
+
+```
+const 変数名 = document.createElement("要素名");
+```
+
+
 
 
 
