--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -32,11 +32,22 @@ window.onload = 関数名();
 
 もしくは、上記の書き方の他に以下の書き方もある。(MDNの`createElement()メソッド`の解説ページではこの書き方がなされていた)
 
-違いとして、`document.body`を使う場合は、`関数名;`のように、関数名の後に`()`を付けずとも実行される。(実行環境はBraveブラウザ)
-
 ```
 document.body.onload = 関数名;
 ```
+
+違いとして、`document.body`を使う場合は、`関数名;`のように、関数名の後に`()`を付けずとも実行される。(実行環境はBraveブラウザ)
+
+予備知識として、JavaScriptで**関数名の後に`()`を付ける場合と、付けない場合でどのような違いがあるのか**も書いておく。
+
+```
+/* パターン1 */
+const something = example;
+
+/* パターン2 */
+const something = example();
+```
+
 
 
 
