--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -38,7 +38,7 @@ document.body.onload = 関数名;
 
 違いとして、`document.body`を使う場合は、`関数名;`のように、関数名の後に`()`を付けずとも実行される。(実行環境はBraveブラウザ)
 
-予備知識として、JavaScriptで**関数名の後に`()`を付ける場合と、付けない場合でどのような違いがあるのか**も書いておく。
+予備知識として、JavaScriptで**関数名の後に`()`を付ける場合と、付けない場合でどのような違いがあるのかも書いておく。**
 
 ```
 /* パターン1 */
