--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -48,7 +48,21 @@ const something = example;
 const something = example();
 ```
 
+パターン1の場合、単に関数example自体が代入されるだけとなる。より具体的には以下のコードの周りを囲んでいる`function example() {}`の部分と、その中身全部が代入される。。
 
+```
+function example(){
+　処理内容
+}
+```
+
+本当に代入されているか自分で確かめたい場合は、コンソール画面で以下のコードを書く。
+
+```
+console.log(something);
+```
+
+一方でパターン2の場合は
 
 
 
