--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -62,7 +62,9 @@ function example(){
 console.log(something);
 ```
 
-一方でパターン2の場合は
+一方でパターン2のように関数名に`()`が付いている場合は、**関数が実行された後にその戻り値が代入される。** 参照:[Zenn](https://zenn.dev/arei/scraps/3e5ad57807fb67)
+
+この時の戻り値は`undefined`となるが、**これは関数内で何も`return`していないため。** (なので、例えば関数の中身の最後に`return 関数名;`と記述すると、関数全体が戻り値として返されることになる)
 
 
 
