--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -18,7 +18,7 @@ const 変数名 = document.createElement("要素名");
 
 **・onloadイベントハンドラープロパティ**
 
-まず、前提として`loadイベント`は、webページを構成するHTMLやCSS、画像などの**すべてのリソースが読み込みを完了した時に発生する。**
+まず、前提として`loadイベント`は、webページを構成するHTMLやCSS、画像などの**すべてのリソースが読み込みを完了した時に発生する。** 参照:[ブレインログ](https://brainlog.jp/programming/javascript/post-470/)
 
 そして、`onloadイベントハンドラープロパティ`では、そんな`loadイベント`が発生した時に実行させたい処理を設定することができる。
 
