--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -67,6 +67,13 @@ console.log(something);
 この時の戻り値は`undefined`となるが、**これは関数内で何も`return`していないため。** (なので、例えば関数の中身の最後に`return 関数名;`と記述すると、関数全体が戻り値として返されることになる)
 
 
+**・createTextNode()メソッド**
+
+`createTextNode()メソッド`は、**新しいテキストを生成する。**
+
+
+
+
 
 
 
