--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -1,3 +1,10 @@
+*目次*
+* [概要](#概要)
+* [基礎知識一覧](#基礎知識一覧)
+* [createElement()メソッド](#createElement()メソッド)
+* [](#)
+* [](#)
+* [](#)
 ## 概要
 
 JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。なお、合わせて調べた周辺知識もまとめている。
