--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -78,7 +78,7 @@ console.log(something);
 
 `createTextNode()メソッド`を使うと、**新しいテキストを生成する**ことができる。
 
-また、 HTML文字を**エスケープ(コードとして認識しなく)する**のに利用できる。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/API/Document/createTextNode) ) このため、XSS対策に使用できる。
+また、 HTML文字を**エスケープ(コードとして認識しなく)する**のに利用できる。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/API/Document/createTextNode) ) このため、**XSS対策に使用できる。**
 
 実際に使用するには以下のように書く。
 
