--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -86,6 +86,13 @@ console.log(something);
 const 変数名 = document.createTextNode("任意の文言");
 ```
 
+### 
+
+`appendChild()メソッド`は、**指定された親要素内の一番下に子要素を追加する。** 基本的にHTML要素を新たに作るメソッドである`createElement()メソッド`と組み合わせて使用する。
+
+
+
+
 
 
 
