--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -4,7 +4,7 @@
 * [createElementメソッド](#createElementメソッド)
 * [onloadイベントハンドラープロパティ](#onloadイベントハンドラープロパティ)
 * [createTextNodeメソッド](#createTextNodeメソッド)
-* [](#)
+* [appendChildメソッド](#appendChildメソッド)
 ## 概要
 
 JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。なお、合わせて調べた周辺知識もまとめている。
@@ -86,12 +86,21 @@ console.log(something);
 const 変数名 = document.createTextNode("任意の文言");
 ```
 
-### 
+### appendChildメソッド
 
 `appendChild()メソッド`は、**指定された親要素内の一番下に子要素を追加する。** 基本的にHTML要素を新たに作るメソッドである`createElement()メソッド`と組み合わせて使用する。
 
+英語でappendには「補足として何かを**追加する**」といった意味がある。
+
+使うには以下のように書く。
+
+```
+const p = document.createElement("p");
+document.body.appendChild(p); /* document.bodyとすることで、親要素にbody要素を指定している。
+```
 
 
+<p>罰ゲームでシカのキャン玉食う羽目になったわw w w</p>
 
 
 
