--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -88,7 +88,7 @@ const 変数名 = document.createTextNode("任意の文言");
 
 ### appendChildメソッド
 
-`appendChild()メソッド`は、**指定された親要素内の一番下に子要素を追加する。** 基本的にHTML要素を新たに作るメソッドである`createElement()メソッド`と組み合わせて使用する。
+`appendChild()メソッド`は、**指定された親要素内の一番下に新たに子要素を追加する。** 基本的にHTML要素を新たに作るメソッドである`createElement()メソッド`と組み合わせて使用する。
 
 英語でappendには「補足として何かを**追加する**」といった意味がある。
 
@@ -99,8 +99,25 @@ const p = document.createElement("p");
 document.body.appendChild(p); /* document.bodyとすることで、親要素にbody要素を指定している。
 ```
 
+上記のように、まず`createElement()メソッド`で要素を作成した後に、`appendChild()メソッド`で追加を行っている。
 
+実行結果は以下になる。
+
+```
+/* 実行結果 */
+<body>
+<p></p>
+</bodY>
+```
+
+もともと`<body>`内に別の要素があった場合は、以下のように末尾に追加される。
+```
+/* 実行結果
+<body>
 <p>罰ゲームでシカのキャン玉食う羽目になったわw w w</p>
+<p></p> /* ここに追加されている */
+</body>
+```
 
 
 
