--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -106,7 +106,7 @@ document.body.appendChild(p); /* document.bodyとすることで、親要素にb
 ```
 /* 実行結果 */
 <body>
-<p></p>
+<p></p> /* ここに追加されている */
 </bodY>
 ```
 
