--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -83,7 +83,7 @@ console.log(something);
 実際に使用するには以下のように書く。
 
 ```
-const 変数名 = document.createTextNode("任意の文言");
+const 変数名 = document.createTextNode("生成したい文言");
 ```
 
 ### appendChildメソッド
