--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -119,6 +119,27 @@ document.body.appendChild(p); /* document.bodyとすることで、親要素にb
 </body>
 ```
 
+### getElementByIdメソッド
+
+`getElementById()メソッド`は、**引数で指定された`id`に一致する要素を返す。**
+
+使用するには以下のように書く。
+
+```
+const 変数名 = document.getElementById("id名");
+```
+
+**注意点**として、以下のコードのように`createElement()メソッド`を使用して要素を生成した後に`idプロパティ`でidを割り当てた場合、`getElementById()メソッド`でアクセスする前に`insertBefore()メソッド`を使用して、要素をHTML文書内にあらかじめ挿入しておく必要がある。
+
+そうしないと、検索結果が`null`になってしまう。
+
+```
+const element = document.createElement("div");
+element.id = "testqq";
+const el = document.getElementById("testqq"); // el は null になります
+```
+引用:[MDN-使用上のメモ](https://developer.mozilla.org/ja/docs/Web/API/Document/getElementById#%E4%BD%BF%E7%94%A8%E4%B8%8A%E3%81%AE%E3%83%A1%E3%83%A2)
+
 
 
 
