--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -5,6 +5,8 @@
 * [onloadイベントハンドラープロパティ](#onloadイベントハンドラープロパティ)
 * [createTextNodeメソッド](#createTextNodeメソッド)
 * [appendChildメソッド](#appendChildメソッド)
+* [getElementByIdメソッド](#getElementByIdメソッド)
+
 ## 概要
 
 JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。なお、合わせて調べた周辺知識もまとめている。
