--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -132,7 +132,7 @@ const 変数名 = document.getElementById("id名");
 ```
 
 **注意点**として、以下のコードのように`createElement()メソッド`を使用して要素を生成した後に`idプロパティ`でidを割り当てた場合、`getElementById()メソッド`でアクセスする前に 
- **`insertBefore()メソッド`を使用して、要素をHTML文書内にあらかじめ挿入しておく必要がある。**
+ **`insertBefore()メソッド`を使用して要素をHTML文書内にあらかじめ挿入しておく必要がある。**
 
 そうしないと、検索結果が`null`になってしまう。
 
