--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -6,6 +6,7 @@
 * [createTextNodeメソッド](#createTextNodeメソッド)
 * [appendChildメソッド](#appendChildメソッド)
 * [getElementByIdメソッド](#getElementByIdメソッド)
+* [insertBeforeメソッド](#insertBeforeメソッド)
 
 ## 概要
 
@@ -142,6 +143,14 @@ element.id = "testqq";
 const el = document.getElementById("testqq"); // el は null になります
 ```
 引用:[MDN-使用上のメモ](https://developer.mozilla.org/ja/docs/Web/API/Document/getElementById#%E4%BD%BF%E7%94%A8%E4%B8%8A%E3%81%AE%E3%83%A1%E3%83%A2)
+
+### insertBeforeメソッド
+
+`insertBefore()メソッド`は、**参照先の要素の上側の位置に指定の要素を挿入する。** 
+
+また、挿入される際、参照先の要素には**通常、親要素(何指定していない場合`<body>要素`)が存在するためその親要素の子要素として新しく挿入される。**
+
+
 
 
 
