--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -126,7 +126,7 @@ document.body.appendChild(p); /* document.bodyとすることで、親要素にb
 
 `getElementById()メソッド`は、**引数で指定された`id`に一致する要素を返す。**
 
-使用するには以下のように書く。
+使うには以下のように書く。
 
 ```
 const 変数名 = document.getElementById("id名");
@@ -149,6 +149,12 @@ const el = document.getElementById("testqq"); // el は null になります
 `insertBefore()メソッド`は、**参照先の要素の上側の位置に指定の要素を挿入する。** 
 
 また、挿入される際、参照先の要素には**通常、親要素(何指定していない場合`<body>要素`)が存在するためその親要素の子要素として新しく挿入される。**
+
+使う時は以下のように書く。
+
+```
+親要素.insertBefore(指定の要素, 参照先の要素)
+```
 
 
 
