--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -150,6 +150,8 @@ const el = document.getElementById("testqq"); // el は null になります
 
 また、挿入される際、参照先の要素には**通常、親要素(何指定していない場合`<body>要素`)が存在するためその親要素の子要素として新しく挿入される。**
 
+英語でinsertは **「挿入する」** といった意味がある。
+
 使う時は以下のように書く。
 
 ```
