--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -158,6 +158,29 @@ const el = document.getElementById("testqq"); // el は null になります
 親要素.insertBefore(指定の要素, 参照先の要素)
 ```
 
+実際のコードは以下になる。
+
+HTMLとJavaScript
+```
+<div id="parentElement">
+  <span id="childElement">foo bar</span>
+</div>
+
+<script>
+  // 新しいただの <span> 要素を作成
+  let sp1 = document.createElement("span");
+
+  // 参照要素を取得
+  let sp2 = document.getElementById("childElement");
+  // 親要素を取得
+  let parentDiv = sp2.parentNode;
+
+  // 新しい要素を sp2 の手前に挿入
+  parentDiv.insertBefore(sp1, sp2);
+</script>
+```
+
+ちなみに` <span id="childElement">`の部分で出てくる「foo bar」はITの分野で技術文書によく登場する言葉で、日本語でいう「なんとか」とか「ホニャララ」的な感じで使われる。( 参照:[foobar](https://ascii.jp/elem/000/000/061/61404/) )
 
 
 
