--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -180,7 +180,16 @@ HTMLとJavaScript
 </script>
 ```
 
-ちなみに` <span id="childElement">`の部分で出てくる「foo bar」はITの分野で技術文書によく登場する言葉で、日本語でいう「なんとか」とか「ホニャララ」的な感じで使われる。( 参照:[foobar](https://ascii.jp/elem/000/000/061/61404/) )
+実行結果
+```
+/* body内のHTML部分より抜粋 */
+<div id="parentElement">
+  <span></span>　/* 挿入された部分 */
+  <span id="childElement">foo bar</span>
+</div>
+```
+
+ちなみに` <span id="childElement">`の部分で出てくる **「foo bar」** はITの分野で技術文書によく登場する言葉で、**日本語でいう「なんとか」とか「ホニャララ」的な感じで使われる。**( 参照:[foobar](https://ascii.jp/elem/000/000/061/61404/) )
 
 
 
