--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -55,7 +55,7 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 
 要するに、リテラルとは`"`で囲むとプログラム上で文字列型として認識され、`{}`で囲むとオブジェクトとして認識されるといったように、**データを記述するための便利な構文のこと。**
 
-### 呼び出し方
+### ブラケット記法とドット記法
 
 オブジェクトの中身を呼び出すには以下の2つのやり方がある。
 
