--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -4,7 +4,7 @@
 * [メソッド](#メソッド)
 * [オブジェクトの定義方法](#オブジェクトの定義方法)
 * [リテラルとは](#リテラルとは)
-* [呼び出し方](#呼び出し方)
+* [ブラケット記法とドット記法](#ブラケット記法とドット記法)
 * [参考](#参考)
 
 ### オブジェクトとは
@@ -65,7 +65,7 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 オブジェクト名["プロパティ名"]　//ブラケット記法。bracketは英語で「角括弧(かくかっこ)などの括弧」の意味がある。
 ```
 
-#### ドット記法
+#### 具体例
 
 ```
 // constを使用してbluearchiveオブジェクトを定義
