--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -93,6 +93,8 @@ const 変数名 = document.createTextNode("生成したい文言");
 
 `appendChild()メソッド`は、**指定された親要素内の一番下に新たに子要素を追加する。** 基本的にHTML要素を新たに作るメソッドである`createElement()メソッド`と組み合わせて使用する。
 
+もしくは、`createTextNode()メソッド`と組み合わせることで**単に指定した要素内にテキストを追加することもできる。**
+
 英語でappendには「補足として何かを**追加する**」といった意味がある。
 
 使うには以下のように書く。
