--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -124,6 +124,32 @@ document.body.appendChild(p); /* document.bodyとすることで、親要素にb
 </body>
 ```
 
+`createTextNode()メソッド`と組み合わせて**要素内にテキストを追加する**には以下のように書く。
+
+```
+<body>
+
+<p id="p1"></p>
+
+<script>
+
+const newtext = document.createTextNode("Hello!");
+const p1 = document.getElementById("p1");
+p1.appendChild(newtext);
+
+</script>
+
+</body>
+```
+
+```
+/* 実行結果 */
+Hello!
+
+/* HTML内 */
+<p id="p1">Hello!</p>  /* 指定したp要素内にテキスト「Hello!」が追加されていることがわかる */
+```
+
 ### getElementByIdメソッド
 
 `getElementById()メソッド`は、**引数で指定された`id`に一致する要素を返す。**
