--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -142,12 +142,13 @@ p1.appendChild(newtext);
 </body>
 ```
 
+実行結果は以下のようになる。指定したp要素内にテキスト「Hello!」が追加されていることがわかる。
 ```
 /* 実行結果 */
 Hello!
 
 /* HTML内 */
-<p id="p1">Hello!</p>  /* 指定したp要素内にテキスト「Hello!」が追加されていることがわかる */
+<p id="p1">Hello!</p>  
 ```
 
 ### getElementByIdメソッド
