--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -151,6 +151,18 @@ Hello!
 <p id="p1">Hello!</p>  
 ```
 
+**補足**
+
+最初に述べた`appendChild()メソッド`の定義だと、上記のコードの動作に引っかかりを覚えたかもしれない。
+
+これは`appendChild()メソッド`の本来の定義を見るとしっくり来る。
+
+`appendChild()メソッド`の本来の定義は、**指定した親ノード内の末尾に新しくノードを追加する**というもの。
+
+そして、`createTextNode()メソッド`も本来の定義は、**新しいテキストノードを生成する**というもの。
+
+つまり、上記のコードの動作は、
+
 ### getElementByIdメソッド
 
 `getElementById()メソッド`は、**引数で指定された`id`に一致する要素を返す。**
