--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -153,7 +153,7 @@ Hello!
 
 **補足**
 
-最初に述べた`appendChild()メソッド`の定義だと、上記のコードの動作に引っかかりを覚えたかもしれない。
+最初に述べた`appendChild()メソッド`の定義だと、**上記のコードの動作に引っかかりを覚えたかもしれない。**
 
 これは`appendChild()メソッド`の本来の定義を見るとしっくり来る。
 
@@ -161,7 +161,7 @@ Hello!
 
 そして、`createTextNode()メソッド`も本来の定義は、**新しいテキストノードを生成する**というもの。
 
-つまり、上記のコードの動作は、
+つまり、上記のコードの動作を厳密に言うなら、**`p要素`を表す要素ノード内にテキストノードを追加した**となる。
 
 ### getElementByIdメソッド
 
