--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -161,7 +161,7 @@ Hello!
 
 そして、`createTextNode()メソッド`も本来の定義は、**新しいテキストノードを生成する**というもの。
 
-つまり、上記のコードの動作を厳密に言うなら、**`p要素`を表す要素ノード内にテキストノードを追加した**となる。
+つまり、上記のコードの動作を厳密に言うなら、**`p要素`を表す要素ノード内に`createTextNode()メソッド`で生成したテキストノードを追加した**となる。
 
 ### getElementByIdメソッド
 
