--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -58,7 +58,7 @@ const something = example;
 const something = example();
 ```
 
-パターン1の場合、単に関数example自体が代入されるだけとなる。より具体的には以下のコードの周りを囲んでいる`function example() {}`の部分と、その中身全部が代入される。。
+パターン1の場合、単に関数example自体が代入されるだけとなる。より具体的には以下のコードの周りを囲んでいる`function example() {}`の部分と、その中身に書かれた処理内容までを含めた全部が代入される。。
 
 ```
 function example(){
