--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -81,6 +81,7 @@ const bluearchive = {
 document.write(bluearchive.name + "<br>");　//bluearchiveオブジェクトのnameプロパティを画面に表示
 
 bluearchive.voice();　//bluearchiveオブジェクトのvoiceメソッドを呼び出し
+bluearchive["voice"]();　//ブラケット記法ver
 ```
 
 実行結果
