--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -1,5 +1,6 @@
 *目次*
 * [概要](#概要)
+* [参考記事](#参考記事)
 * [基礎知識一覧](#基礎知識一覧)
 * [createElementメソッド](#createElementメソッド)
 * [onloadイベントハンドラープロパティ](#onloadイベントハンドラープロパティ)
@@ -11,6 +12,17 @@
 ## 概要
 
 JavaScriptを使って、ブラウザ画面上にカラフルなタイルを生成したい。そのための基礎知識をまとめていく。なお、合わせて調べた周辺知識もまとめている。
+
+## 参考記事
+
+・MDN
+
+https://developer.mozilla.org/ja/docs/Learn/JavaScript/Building_blocks/Events#%E3%82%A4%E3%83%99%E3%83%B3%E3%83%88%E3%81%AE%E7%A7%BB%E8%AD%B2
+
+・JavaScriptで綺麗な色を生成する
+
+https://sbfl.net/blog/2018/05/21/javascript-generate-better-color/
+
 
 ## 基礎知識一覧
 
