--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -8,6 +8,7 @@
 * [appendChildメソッド](#appendChildメソッド)
 * [getElementByIdメソッド](#getElementByIdメソッド)
 * [insertBeforeメソッド](#insertBeforeメソッド)
+* [フレックス](#フレックス)
 
 ## 概要
 
@@ -245,6 +246,15 @@ HTMLとJavaScript
 ```
 
 ちなみに` <span id="childElement">`の部分で出てくる **「foo bar」** はITの分野で技術文書によく登場する言葉で、**日本語でいう「なんとか」とか「ホニャララ」的な感じで使われる。**( 参照:[foobar](https://ascii.jp/elem/000/000/061/61404/) )
+
+### フレックス
+
+`flex`に関する用語を以下の表にまとめる。
+
+||意味|
+|-|-|
+|フレックスコンテナ|フレックスを使用してレイアウトされた文書の領域のこと。|
+|フレックスアイテム|`display:flex`または`display:inline-flex`が設定された要素の直下の子要素はフレックスアイテムとなる。|
 
 
 
