--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -254,7 +254,9 @@ HTMLとJavaScript
 ||意味|
 |-|-|
 |フレックスコンテナ|フレックスを使用してレイアウトされた文書の領域のこと。|
-|フレックスアイテム|`display:flex`または`display:inline-flex`が設定された要素の直下の子要素はフレックスアイテムとなる。|
+|フレックスアイテム|フレックスコンテナを作成するには`display:flex`または`display:inline-flex`に設定する。`display:flex`または`display:inline-flex`に設定された要素の**直下の子要素はフレックスアイテムとなる。**|
+
+`flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
 
 
