--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -256,6 +256,8 @@ HTMLとJavaScript
 |フレックスコンテナ|フレックスを使用してレイアウトされた文書の領域のこと。|
 |フレックスアイテム|フレックスコンテナを作成するには`display:flex`または`display:inline-flex`に設定する。`display:flex`または`display:inline-flex`に設定された要素の**直下の子要素はフレックスアイテムとなる。**|
 
+**初期値**
+
 `flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
 
