--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -260,6 +260,8 @@ HTMLとJavaScript
 
 `flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
+`flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずにはみ出る。**
+
 
 
 
