--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -254,13 +254,13 @@ HTMLとJavaScript
 ||意味|
 |-|-|
 |フレックスコンテナ|フレックスを使用してレイアウトされた文書の領域のこと。|
-|フレックスアイテム|フレックスコンテナを作成するには`display:flex`または`display:inline-flex`に設定する。`display:flex`または`display:inline-flex`に設定された要素の**直下の子要素はフレックスアイテムとなる。**|
+|フレックスアイテム|フレックスコンテナを作成するには`display:flex`または`display:inline-flex`に設定する必要がある。`display:flex`または`display:inline-flex`に設定された要素の**直下の子要素はフレックスアイテムとなる。**|
 
 **初期値**
 
 `flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
-`flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずにはみ出る。**
+`flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずに領域から、はみ出る。**
 
 
 
