--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -260,7 +260,7 @@ HTMLとJavaScript
 
 `flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
-`flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずに領域から、はみ出る。**
+`flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずに領域からはみ出る。**
 
 
 
