--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -262,6 +262,36 @@ HTMLとJavaScript
 
 `flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずに領域からはみ出る。**
 
+**使い方**
+
+`flex`を実際に使用するには以下のように書く。
+
+```
+<!-- HTML -->
+<body>
+
+<div class="box">
+  <div>One</div>
+  <div>Two</div>
+  <div>Three <br />には追加の<br />テキストが<br />あります</div>
+</div>
+
+</body>
+```
+```
+/* CSS */
+.box > * {
+  border: 2px solid rgb(96 139 168);
+  border-radius: 25% 10%;
+  background-color: rgb(96 139 168 / 0.5);
+}
+
+.box {
+  border: 2px dotted rgb(96 139 168);
+  display: flex;
+}
+```
+
 
 
 
