--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -292,6 +292,14 @@ HTMLとJavaScript
 }
 ```
 
+**解説**
+
+上記のCSSコードでわからない書き方が出てきたので以下の表にその意味をまとめた。
+
+||意味|
+|-|-|
+|`> *`|`>`をは子要素に適用するという意味。`*`は「全てに」という意味。つまり、上記のコードでは、class名`box`を持つ要素の**子要素全てに対して適用する**という意味になる。|
+|||
 
 
 
