--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -300,7 +300,7 @@ HTMLとJavaScript
 |-|-|
 |`> *`|`>`をは子要素に適用するという意味。`*`は「全てに」という意味。つまり、上記のコードでは、class名`box`を持つ要素の**子要素全てに対して適用する**という意味になる。|
 |`border-radius`|どれくらい角を丸めるかを指定できる。英語でradiusは「半径」という意味。1つの数値を設定すると「角丸」となり、2つの数値を設定すると角が「楕円」となる。上記のコードでは「楕円」を設定している。|
-|`/ 0.5`|``|
+|`/ 0.5`|`rgb()`では`/ 数値`の部分で**アルファチャネル**を指定できる。アルファチャネルは**ある色が後ろ側にある色をどの程度覆い隠すか**を表す。つまりどれくらい透けるかを表す。`/ 0.5`は50%を表している。|
 
 
 
